--- a/LeetCode_and_BlueCup_Code/LeetCode_and_BlueCup_Code.vcxproj
+++ b/LeetCode_and_BlueCup_Code/LeetCode_and_BlueCup_Code.vcxproj
@@ -132,7 +132,9 @@
   <ItemGroup>
     <ClCompile Include="Blue1597.IP补充.cpp" />
     <ClCompile Include="Blue1602.出现最多的字符.cpp" />
+    <ClCompile Include="Blue1605.直角三角形.cpp" />
     <ClCompile Include="Blue2360.互质.cpp" />
+    <ClCompile Include="~~~Blue5003.反异或01串.cpp" />
     <ClCompile Include="Leet633.平方数之和.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
