--- a/LeetCode_and_BlueCup_Code/LeetCode_and_BlueCup_Code.vcxproj.filters
+++ b/LeetCode_and_BlueCup_Code/LeetCode_and_BlueCup_Code.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClCompile Include="Blue1602.出现最多的字符.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Blue1605.直角三角形.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="~~~Blue5003.反异或01串.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
