--- a/LeetCode_and_BlueCup_Code/LeetCode_and_BlueCup_Code.vcxproj
+++ b/LeetCode_and_BlueCup_Code/LeetCode_and_BlueCup_Code.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="Solution_of_Leet.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Blue1259.奇怪的捐赠.cpp" />
     <ClCompile Include="~~~Leet3222.求出硬币游戏的玩家.cpp" />
     <ClCompile Include="Leet3254. 长度为 K 的子数组的能量值 I.cpp" />
     <ClCompile Include="Leet_Main.cpp" />
