--- a/LeetCode_and_BlueCup_Code/LeetCode_and_BlueCup_Code.vcxproj
+++ b/LeetCode_and_BlueCup_Code/LeetCode_and_BlueCup_Code.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClCompile Include="263.丑数.cpp" />
     <ClCompile Include="Blue1259.奇怪的捐赠.cpp" />
+    <ClCompile Include="Leet1470.重新排列数组.cpp" />
     <ClCompile Include="Leet3255. 长度为 K 的子数组的能量值 II.cpp" />
     <ClCompile Include="~~~Leet769. 最多能完成排序的块.cpp" />
     <ClCompile Include="~~~Leet3222.求出硬币游戏的玩家.cpp" />
